# p3dx

./: README.md
ardrone_autonomy/: CMakeLists.txt
ardrone_gazebo/: CMakeLists.txt
ardrone_gazebo/launch/: ardrone.launch  single_ardrone (copy).launch  single_ardrone.launch
ardrone_gazebo/models/ardrone_gazebo/: ardrone_gazebo.sdf
ardrone_gazebo/scripts/: ardrone_teleop_key.py  drone_control.py
ardrone_gazebo/urdf/: ardrone_gazebo.urdf  ardrone_gazebo.urdf.xacro
p3dx_control/: CMakeLists.txt
p3dx_control/launch/: control.launch
p3dx_description/: CMakeLists.txt  package.xml
p3dx_description/aruco_marker/: model.config  model.sdf
p3dx_description/meshes/: Marker0.dae
p3dx_description/urdf/: camera.sdf  camera.xacro  pioneer3dx.urdf  pioneer3dx.xacro  pioneer3dx_with_marker.xacro
p3dx_description/urdf/aruco_marker/: model.sdf
p3dx_gazebo/: CMakeLists.txt  move (copy).py  move.py  multiple_robot.py  package.xml  robot_launcher.py  robot_launcher_ui.py  subscriber.py  subscriber_node.py
p3dx_gazebo/launch/: ardrone_gui.py  circle.py  circle_movement (copy).py  circle_movement.py  drone.py  dynamic_launch.launch  dynamic_launch_ardrone.launch  gui.py  gui_launcher.py  land.py  p3dx (copy).launch  p3dx.launch  spawn.launch  spawn_robot.launch  takeoff.py
p3dx_gazebo/scripts/: aruco_detector (copy).py  aruco_detector.py  calibration_node.py  camera_publisher.py
p3dx_gazebo/ui/: robot_launcher.ui
p3dx_gazebo/worlds/: gazebo_world.world
